tests/cases/traits/errors/structural-capability-return-mismatch.ari
struct Packet {
  value: i64,
}

impl Packet {
  fn serialize(self) -> bool {
    true
  }
}

fn save(value: has serialize() -> i64) -> i64 {
  return 0;
}

fn main() -> i64 {
  return save(Packet { value: 1 });
}
